--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Katalog Resources
+Resources/
+
+# Katalog _Obfuscar
+_Obfuscar/
+
+# Katalog Properties
+Properties
+ 
 # User-specific files
 *.rsuser
 *.suo
